# spacebok_ros_sim

./: CMakeLists.txt  README.md  package.xml
config/: front_left_joint_1.yaml~  front_left_motor_1.yaml~  joint_controller.yaml
launch/: gazebo.launch  spacebok_sim.launch  spacebok_sim.launch~
rviz/: urdf.rviz~
urdf/: spacebok_sim.urdf.xacro  spacebok_sim.urdf.xacro~
